--- a/AADF/aboutus.html
+++ b/AADF/aboutus.html
@@ -43,7 +43,7 @@
 
     <section class="hero-area">
       <div class="hero-text">
-        <h1> Qui sommes-nous ?</h1>
+        <h2> QUI SOMMES-NOUS?</h2>
         <img src="assests/img/undraw_playing_cards_cywn 1.svg"  alt="">
       </div>
       </section>
